--- a/SimpleBlog/Views/Posts/Index.cshtml
+++ b/SimpleBlog/Views/Posts/Index.cshtml
@@ -1,3 +1,2 @@
-﻿<h1> True is true! </h1>
-<br/>
-@Html.RouteLink("Click Here!", "Login")
+﻿@Html.RouteLink("Click Here!", "Login")
+<a href="@Url.RouteUrl("")">Anasayfa</a>
