--- a/SimpleBlog/Views/Shared/_Layout.cshtml
+++ b/SimpleBlog/Views/Shared/_Layout.cshtml
@@ -8,9 +8,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>_Layout</title>
+    <title>@ViewBag.Title - Simple Blog</title>
 </head>
 <body>
+    <img src="https://www.trakya.edu.tr/admin/tools/theme/www_v2/images/logo/tr/logo.png" />
+    <h1>This is our SimpleBlog Project</h1>
     <header>
         <h1>
             <a href="@Url.RouteUrl("")"> Simple Blog </a>
